basic ui for the game

--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>TIC TAC TOE</h1>
+    </header>
+    <main>
+        <div id="info">
+            <span>Player 1 won the game</span>
+        </div>
+        <div id="gameBoard">
+            <div class="field"></div>
+            <div class="field"></div>
+            <div class="field"></div>
+            <div class="field"></div>
+            <div class="field"></div>
+            <div class="field"></div>
+            <div class="field"></div>
+            <div class="field"></div>
+            <div class="field"></div>
+        </div>
+    </main>
 </body>
 </html>
