the grid is generated with a module function, and the reference to each field is saved in an array, also added an event listener to each field

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/4627f18a48.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -17,17 +16,9 @@
         <div id="info">
             <span>Player 1 won the game</span>
         </div>
-        <div id="gameBoard">
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
+        <div id="game-board">
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
